# rust-cookbook

./: CONTRIBUTING.md  Cargo.toml  build.rs
src/: about.md  errors.md
src/algorithms/randomness/: rand-choose.md  rand-custom.md  rand-dist.md  rand-passwd.md  rand-range.md  rand.md
src/cli/arguments/: clap-basic.md
src/compression/tar/: tar-strip-prefix.md
src/concurrency/parallel/: rayon-parallel-sort.md  rayon-thumbnails.md
src/concurrency/thread/: global-mut-state.md  threadpool-fractal.md  threadpool-walk.md
src/cryptography/hashing/: sha-digest.md
src/data_structures/bitfield/: bitfield.md
src/database/postgres/: aggregate_data.md
src/datetime/duration/: checked.md  timezone.md
src/datetime/parse/: timestamp.md
src/development_tools/build_tools/: cc-bundled-cpp.md  cc-bundled-static.md  cc-defines.md
src/development_tools/debugging/config_log/: log-custom.md  log-mod.md
src/development_tools/versioning/: semver-command.md  semver-complex.md  semver-increment.md  semver-latest.md  semver-prerelease.md
src/encoding/csv/: filter.md  serde-serialize.md  serialize.md  transform.md
src/encoding/string/: base64.md
src/errors/handle/: main.md
src/file/dir/: find-file.md  ignore-case.md  modified.md  png.md
src/science/mathematics/linear_algebra/: deserialize-matrix.md
src/science/mathematics/statistics/: central-tendency.md
src/text/regex/: filter-log.md  hashtags.md  phone.md
src/web/clients/api/: paginated.md  rest-post.md
src/web/mime/: request.md
src/web/scraping/: broken.md  extract-links.md  unique.md
src/web/url/: base.md  origin.md
(+5 files in other folders)
